--- a/macos.local/.flake/system/aerospace.nix.org
+++ b/macos.local/.flake/system/aerospace.nix.org
@@ -13,7 +13,12 @@
           outer.top = 0;
           outer.right = 0;
         };
+        on-focused-monitor-changed = [
+          "move-mouse monitor-lazy-center"
+        ];
         mode.main.binding = {
+          cmd-enter = "exec-and-forget open -n /Applications/Ghostty.app/";
+
           cmd-h = "focus left";
           cmd-j = "focus down";
           cmd-k = "focus up";
@@ -36,7 +41,7 @@
           cmd-7 = "workspace 7";
           cmd-8 = "workspace 8";
           cmd-9 = "workspace 9";
-          cmd-0 = "workspace 10";
+          cmd-0 = "workspace 0";
 
           cmd-shift-1 = "move-node-to-workspace 1";
           cmd-shift-2 = "move-node-to-workspace 2";
