--- a/macos.local/.flake/system/aerospace.nix.org
+++ b/macos.local/.flake/system/aerospace.nix.org
@@ -13,7 +13,7 @@
           outer.top = 0;
           outer.right = 0;
         };
-        on-focused-monitor-changed = [
+        on-focused-changed = [
           "move-mouse monitor-lazy-center"
         ];
         mode.main.binding = {
@@ -44,7 +44,7 @@
           cmd-7 = "workspace 7";
           cmd-8 = "workspace 8";
           cmd-9 = "workspace 9";
-          cmd-0 = "workspace 0";
+          cmd-0 = "workspace 10";
 
           cmd-shift-1 = "move-node-to-workspace 1";
           cmd-shift-2 = "move-node-to-workspace 2";
@@ -55,7 +55,7 @@
           cmd-shift-7 = "move-node-to-workspace 7";
           cmd-shift-8 = "move-node-to-workspace 8";
           cmd-shift-9 = "move-node-to-workspace 9";
-          cmd-shift-0 = "move-node-to-workspace 0";
+          cmd-shift-0 = "move-node-to-workspace 10";
         };
       };
     };
