--- a/macos.local/.flake/system/aerospace.nix.org
+++ b/macos.local/.flake/system/aerospace.nix.org
@@ -14,7 +14,7 @@
           outer.right = 0;
         };
         on-focus-changed = [
-          "move-mouse monitor-lazy-center"
+          "move-mouse window-lazy-center"
         ];
         mode.main.binding = {
           cmd-enter = "exec-and-forget open -n /Applications/Ghostty.app/";
