--- a/macos.local/.flake/system/aerospace.nix.org
+++ b/macos.local/.flake/system/aerospace.nix.org
@@ -56,6 +56,10 @@
           cmd-shift-8 = "move-node-to-workspace 8";
           cmd-shift-9 = "move-node-to-workspace 9";
           cmd-shift-0 = "move-node-to-workspace 10";
+
+          cmd-ctrl-shift-m = "move-workspace-to-monitor --wrap-around next";
+          cmd-shift-v = "split horizontal";
+          cmd-shift-s = "split vertical";
         };
       };
     };
