--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -97,7 +97,7 @@ This block is the reason I use =straight= rather than just =use-package=. I have
   (use-package diredfl
     :init
     (diredfl-global-mode 1))
-  ;;(add-to-list 'default-frame-alist '(undecorated . t))
+  (add-to-list 'default-frame-alist '(undecorated . t))
   (scroll-bar-mode -1)
   (tool-bar-mode -1)
   (menu-bar-mode -1)
