--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -98,6 +98,7 @@ This block is the reason I use =straight= rather than just =use-package=. I have
     :init
     (diredfl-global-mode 1))
   ;;(add-to-list 'default-frame-alist '(undecorated . t))
+  (when (eq system-type 'darwin) (ns-auto-titlebar-mode))
   (scroll-bar-mode -1)
   (tool-bar-mode -1)
   (menu-bar-mode -1)
