--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -181,7 +181,9 @@ Make PDFs save where in the document it was last.
 * Tools
 Install =esup= as a profiling tool.
 #+begin_src emacs-lisp
-  (use-package esup)
+  (use-package esup
+    :config
+    (setq esup-depth 0))
 #+end_src
 
 Configure =dumb-jump= for better lookup.
@@ -200,7 +202,7 @@ Install a better PDF viewer than =DocView=.
 #+begin_src emacs-lisp
   (use-package pdf-tools
     :config
-    (pdf-tools-install)
+    ;;(pdf-tools-install)
     :hook
     (pdf-view-mode . (lambda () (display-line-numbers-mode -1)))
     :init
