--- a/macos.local/.flake/home/programs/ghostty.nix.org
+++ b/macos.local/.flake/home/programs/ghostty.nix.org
@@ -1,23 +1,23 @@
-#+title: GhosTTY Configuration
+#+title: ghostty Configuration
 
-This terminal emulator seems over-hyped, but I'm trying it anyways.
+I use =ghostty= as a terminal emulator on macOS. I disable auto-update and set some sensible options.
 #+begin_src nix
   { config, pkgs, ... }:
 
   {
     home.file."./.config/ghostty/config".text = ''
-    auto-update = "off"
-    background-blur-radius = 20
-    background-opacity = 0.8
-    clipboard-trim-trailing-spaces = true
-    font-family = "SauceCodePro Nerd Font"
-    font-thicken = true
-    macos-option-as-alt = true
-    macos-window-shadow = false
-    mouse-hide-while-typing = true
-    quit-after-last-window-closed = true
-    theme = "Builtin Light"
-    window-decoration = true
+      auto-update = "off"
+      background-blur-radius = 20
+      background-opacity = 0.8
+      clipboard-trim-trailing-spaces = true
+      font-family = "SauceCodePro Nerd Font"
+      font-thicken = true
+      macos-option-as-alt = true
+      macos-window-shadow = false
+      mouse-hide-while-typing = true
+      quit-after-last-window-closed = true
+      theme = "Builtin Light"
+      window-decoration = true
     '';
   }
 #+end_src
