--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -67,6 +67,8 @@ Bootstrap package management. I use =straight= with =use-package= to allow decla
   (add-hook 'after-init-hook #'elpaca-process-queues)
   (elpaca `(,@elpaca-order))
 
+  (setq use-package-always-ensure t)
+
   (elpaca elpaca-use-package
     ;; Enable use-package :ensure support for Elpaca.
     (elpaca-use-package-mode))
