--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -26,7 +26,7 @@ Suppress native compilation warnings and errors. Native compilation seems to be 
   (setq native-comp-async-report-warnings-errors 'silent)
 #+end_src
 
-Bootstrap package management. I use =straight= with =use-package= to allow declarative package management and include =git= repositories in addition to =elpa= / =melpa=.
+Bootstrap package management. I use =elpaca= with =use-package= to allow asynchronous declarative package management.
 #+begin_src emacs-lisp
   (defvar elpaca-installer-version 0.8)
   (defvar elpaca-directory (expand-file-name "elpaca/" user-emacs-directory))
@@ -70,7 +70,6 @@ Bootstrap package management. I use =straight= with =use-package= to allow decla
   (setq use-package-always-ensure t)
 
   (elpaca elpaca-use-package
-    ;; Enable use-package :ensure support for Elpaca.
     (elpaca-use-package-mode))
 #+end_src
 
@@ -289,7 +288,7 @@ Set up =flycheck= and =flyspell= for syntax and spell checking respectively.
     :hook
     (text-mode . flyspell-mode)
     :bind
-    (:map flyspell-mode-map ("C-;" . flyspell-correct-wrapper)))
+    (:map flyspell-mode-map ("C-;" . flyspell-correct-word)))
 #+end_src
 
 Install =yasnippet= for managing snippets and =yasnippet-snippets= for a collection of useful snippets.
