--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -113,9 +113,9 @@ I use =doom-modeline= and =nerd-icons= for a nicer-looking user interface and re
   (use-package ns-auto-titlebar
     :init
     (ns-auto-titlebar-mode))
-  (scroll-bar-mode -1)
-;;  (tool-bar-mode -1)
-  (push '(tool-bar-lines . 0) default-frame-alist)
+  ;; (scroll-bar-mode -1)
+  (add-to-list 'default-frame-alist '(vertical-scroll-bars . nil))
+  (push '(tool-bar-lines . 0) default-frame-alist) ; saves about 0.1 seconds on startup over `(tool-bar-mode -1)`
   (menu-bar-mode -1)
 #+end_src
 
