--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -95,9 +95,9 @@ Set up fonts. I use Source Code Pro (Nerd Font) for monospace and Computer Moder
 
 I use =doom-modeline= and =nerd-icons= for a nicer-looking user interface and remove the title bar from the window along with any other unnecessary elements from the screen. =dired= is modified to use =nerd-icons= and colours.
 #+begin_src emacs-lisp
-  (use-package doom-modeline
-    :init
-    (doom-modeline-mode 1))
+;;  (use-package doom-modeline
+;;    :init
+;;    (doom-modeline-mode 1))
   (use-package nerd-icons)
   (use-package nerd-icons-dired
     :after
